<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andrei Nitu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="pin_password_verify">Repeat 4 digit pin</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password cannot be empty</string>
    <string name="error_invalid_username">Username cannot be empty</string>
    <string name="error_mismatch_password">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">Andrei Nitu</string>
    <string name="heart_rate">00</string>
    <string name="rememberMe">Remember me</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="action_startstop_watch">Start/Stop Watch</string>
    <string name="action_startstop_service">Start/Stop Service</string>
    <string name="action_set_day">Last day</string>
    <string name="action_set_month">Last month</string>
    <string name="action_set_year">Last year</string>
    <string name="action_live">Live/Static</string>
    <string name="server">Server IP</string>

</resources>
