<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kii.demo.wearable.MainActivity" >
    <item android:id="@+id/action_live"
        android:title="@string/action_live"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_set_day"
        android:title="@string/action_set_day"
        android:orderInCategory="200"
        android:showAsAction="never" />
    <item android:id="@+id/action_set_month"
        android:title="@string/action_set_month"
        android:orderInCategory="300"
        android:showAsAction="never" />
    <item android:id="@+id/action_set_year"
        android:title="@string/action_set_year"
        android:orderInCategory="400"
        android:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="600"
        android:showAsAction="never" />
</menu>
